trunk/Archive2/51/c4597e793406f0/output
main.cpp:2:36: error: variable or field 'AggregatePocedure' declared void
 void AggregatePocedure(context_ptr const context) {
                                    ^
main.cpp:2:24: error: 'context_ptr' was not declared in this scope
 void AggregatePocedure(context_ptr const context) {
                        ^
